--- a/Version 3/report.html
+++ b/Version 3/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,50256],[],[[4,0,1,0,[],[0,347,49909,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,654],[],[[4,0,1,0,[],[1,549,105],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*iLO repo","*C:\\Users\\Administrator\\Documents\\Robot\\Version 3\\iLO_repo.robot","*iLO_repo.robot","*Test main","*Element with locator 'xpath:/html[1]/body[1]/div[4]/div[1]/div[1]/div[2]/article[1]/div[1]/article[1]/section[1]/div[1]/ul[1]/li[4]/a[1]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Fix","*C:\\Users\\Administrator\\Documents\\Robot\\Version 3\\fix.robot","*fix.robot","*Test main"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:50","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:50","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:50","fail":1,"id":"s1","label":"iLO repo","name":"iLO repo","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:01","fail":0,"id":"s1","label":"Fix","name":"Fix","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1608190938148;
+window.output["baseMillis"] = 1611040518800;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 50340;
+window.output["generated"] = 667;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
